# NessEbayAutomation

./: .env  .gitignore  README.md  ReadMeAiBugs.md  playwright_config.py  pyproject.toml  pytest.ini  requirements.txt
allure-report/: index.html
allure-report/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/data/attachments/: 1ef6ad7937707de.txt  a78c7fde47480b7d.txt  aaa0782ef22ef9e.txt  bde67cfc4af7496.txt  c0778403ece2e24c.txt  f0e1bb9861b233e2.txt
allure-report/data/test-cases/: 6e536f88acccff45.json  8f8a7c448baa7736.json  d24613aa13df18c5.json
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: history.json
allure-report/widgets/: behaviors.json  duration-trend.json  severity.json  status-chart.json  summary.json
src/ebay/pages/: __init__.py  advanced_search.py  base_page.py  cart_page.py  ebay_site.py  header_page.py  home_page.py  item_page.py  login_page.py  search_results_page.py
src/ebay/tests/config/: conftest.py  playwright_config.py
src/ebay/utils/: allure_attachments.py  attach_summery.py  extract.py  log.py  place_holder.py  price_parser.py  random_option.py
src/tests/: test_ebay.py
src/tests/config/: conftest.py
tests/: conftest.py  test_ebay.py  test_ebay_search.py
tests/config/: conftest.py  playwright_config.py
