[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebay-playwright-allure"
version = "0.1.0"
description = "Playwright Python automation starter for eBay with Allure reporting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.52.0",
  "pytest>=8.3.0",
  "allure-pytest>=2.13.5",
  "python-dotenv>=1.2.2"
]

[tool.setuptools.packages.find]
where = ["src"]