[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebay-playwright-allure"
version = "0.1.0"
description = "Playwright Python automation starter for eBay with Allure reporting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.52.0",
  "pytest>=8.3.0",
  "pytest-playwright>=0.7.0",
  "allure-pytest>=2.13.5",
  "python-dotenv>=1.2.2",
  "ruff>=0.8.0",
  "black>=24.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B"
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"